--- a/my-website-app/package.json
+++ b/my-website-app/package.json
@@ -8,6 +8,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
+  "devDependencies": {
+    "node-sass": "^4.13.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
