--- a/my-website-app/package.json
+++ b/my-website-app/package.json
@@ -8,7 +8,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.4.0",
+    "typewriter-effect": "^2.13.1"
   },
   "devDependencies": {
     "node-sass": "^4.13.0"
